SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Option_Year__c.object
<CustomObject>
    <fields>
        <fullName>Option_Year_End_Date__c</fullName>
        <label>Option Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_Year_Start_Date__c</fullName>
        <label>Option Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remaining_Months_in_OY__c</fullName>
        <formula>(Option_Year_End_Date__c -  Option_Year_Start_Date__c) /365 *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Months in OY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Option Year</label>
    <nameField>
        <label>CSP Option Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Option Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>